# otus-6

./: .travis.yml  CMakeLists.txt  main.cpp  matrix.h  test_matrix.cpp
